Fixed overflow

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -3,7 +3,6 @@ html {
   max-width: 100%;
 }
 
-
 body {
   font-family: 'Lato';
   color: #FFF;
@@ -478,7 +477,7 @@ i#pause:hover {
   display: block;
   width: 20vw;
   height: 100vh;
-  
+  overflow:hidden;
   background-color: rgba(0, 0, 0, 0.2);
   z-index: 1002;
   transition: all 0.35s ease-in;
